# WildfireCrisisSupportAgent

./: .gitignore
wildfire_crisis_demo/: .env.example  .gitignore  README.md  cli.py  observability.py  pyproject.toml  requirements.txt
wildfire_crisis_demo/app/: deps.py  main.py  routes.py
wildfire_crisis_demo/developer/: app-creation-prompt.txt
wildfire_crisis_demo/docs/: architecture.html  architecture.md
wildfire_crisis_demo/domain/: models.py  policy.py
wildfire_crisis_demo/foundry/: client.py  fake_client.py
wildfire_crisis_demo/sample_payloads/: wildfire_01.json  wildfire_02.json
wildfire_crisis_demo/services/: orchestrator.py  prompts.py  simulator.py  timeline.py
wildfire_crisis_demo/tests/contract/: test_agent_contracts.py
wildfire_crisis_demo/tests/integration/: test_foundry_live.py
wildfire_crisis_demo/tests/unit/: test_models.py  test_orchestrator.py  test_policy.py
wildfire_crisis_demo/ui/: index.html  render.py
